--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-
-
+#localhost:8080/weather/next_7days
+#localhost:8080/weather/next_7days/{email}
+#localhost:8080/weather/current_week
+#localhost:8080/weather/next_week
