--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port = 8081
 
 #Mail
 spring.mail.host=smtp.gmail.com
@@ -7,7 +8,6 @@ spring.mail.password=lmzadnivulnjvjkt
 #spring.mail.password=lmza dniv ulnj vjkt
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
 
 #localhost:8080/weather/next_7days
 #localhost:8080/weather/next_7days/{email}
