--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,6 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=mdebonbcn@gmail.com
 spring.mail.password=lmzadnivulnjvjkt
-#spring.mail.password=lmza dniv ulnj vjkt
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -13,3 +12,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #localhost:8080/weather/next_7days/{email}
 #localhost:8080/weather/current_week
 #localhost:8080/weather/next_week
+
+#MongoDB
+spring.data.mongodb.uri=mongodb://193.203.190.86:27017/windsurf
+
+custom.ip=193.203.190.86
